<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_icon"
        android:iconTint="@color/navy_blue"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/setting"
        android:iconTint="@color/navy_blue"
        android:title="@string/setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/favorite"
        android:iconTint="@color/navy_blue"
        android:title="@string/favorite"
        app:showAsAction="never"
        />
</menu>