<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.githubsearch.ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />



        <TextView
            android:id="@+id/tv_detail_nama"
            style="@style/detailTextUser.BiggerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            android:textSize="30sp"
            tools:text="Nama" />

        <LinearLayout
            android:id="@+id/ll_follower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="7dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_nama">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_follower"
                    style="@style/detailTextUser.BiggerText"
                    android:textSize="15sp"
                    tools:text="Followers" />

                <TextView
                    style="@style/detailTextApp"
                    android:textSize="10sp"
                    android:text="@string/followers" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/detailTextUser.BiggerText"
                    tools:text="Following"
                    android:textSize="15sp"
                    />

                <TextView
                    style="@style/detailTextApp"
                    android:textSize="10sp"
                    android:text="@string/following" />

            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/progressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_detail"
        app:tabSelectedTextColor="@color/turquoise"
        app:tabTextColor="@android:color/white" />

<!--    <de.hdodenhof.circleimageview.CircleImageView-->
<!--        android:id="@+id/icon_fav"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/fav_empty"-->
<!--        android:tint="@color/white"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:layout_marginEnd="50dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/icon_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:fabSize="normal"
        android:contentDescription="@string/favbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/fav_empty" />

</androidx.constraintlayout.widget.ConstraintLayout>